Fine tune styling

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -61,6 +61,24 @@ body
       text-shadow: 2px 3px 5px #616161
       filter: dropshadow(color=#616161, offx=2, offy=3)
 
+.form-inline
+  .control-group
+    clear: both
+    
+  dd, dt
+    display: inline
+
 .footer
   font-size: 12px
+  margin-top: 15px
+  
+.alert
+  height: 25px
+  margin-top: 15px
+  clear: both
+  padding: 5px
+
+.alert-success
+  background-color: #7AFAB8
+  border: 2px solid #00DE6B
   
