Re-styling pages form and show

--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,4 +1,4 @@
-%nav.actions
+.row
   = link_to "edit", edit_slug_path(page.slug)
   |
   = link_to "delete", slug_path(page.slug), method: :destroy
