Redesign root page.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,25 +6,4 @@
     If you seek surf lessons from knowledgeable, skilled instructors in a comfortable envrionment, then you’ve come to the right place. Please follow the links above to learn more about the Saltwater Cowgirls Surf Camp experience!
 
 .row
-  .left-column
-    %p Bacon ipsum dolor sit amet pork belly meatball ham hock consectetur adipisicing aliqua shoulder minim swine consequat short ribs elit tenderloin prosciutto quis. Eu minim turducken sint occaecat enim exercitation chicken pork commodo deserunt ea. Commodo drumstick bresaola et jowl adipisicing laborum dolore. Hamburger chuck spare ribs exercitation, velit ribeye t-bone aliquip shank reprehenderit minim doner do. Pig hamburger sausage qui.
-    %p
-    Ut swine eiusmod shankle, venison filet mignon ad capicola. Tri-tip rump magna pig tail hamburger quis aute tenderloin aliqua. Filet mignon pork loin tongue corned beef t-bone quis. Qui capicola ad beef tongue in filet mignon dolore meatloaf sed exercitation frankfurter consectetur velit. Commodo cupidatat et nisi esse adipisicing. Officia shoulder turducken fatback, tri-tip tongue bacon minim meatloaf fugiat beef ribs.
-    %p
-    Tri-tip dolore meatball excepteur ribeye esse chicken kielbasa pork belly tongue filet mignon tempor. Occaecat fugiat kielbasa bresaola anim sausage. Dolore laboris drumstick sirloin et leberkas minim strip steak aliquip pork chop voluptate. Bacon anim ut, sint doner cillum irure. Hamburger ex magna pig dolore, prosciutto ham ball tip strip steak pork tempor drumstick fugiat frankfurter.
-    %p
-    Aliquip excepteur bresaola exercitation minim aute. Jerky mollit corned beef occaecat pastrami doner. T-bone ut adipisicing aute flank, nostrud nulla sausage veniam corned beef magna strip steak. Chuck aliquip prosciutto, ullamco in boudin adipisicing tempor corned beef. Voluptate mollit tempor qui.
-    %p
-    Fatback culpa cillum corned beef salami ea sint deserunt ad flank turducken exercitation aliqua. Pork chop t-bone pastrami pariatur veniam. Venison aute rump dolor ground round in ullamco shank do voluptate tempor pig excepteur enim beef ribs. Culpa jerky in, ham occaecat in dolore pork nulla ut incididunt velit ribeye bacon. Consectetur pork belly id eu in adipisicing pork loin in. Corned beef ground round reprehenderit jowl. Pork chop pancetta reprehenderit, nulla kielbasa veniam turducken.
-
-  .right-column
-    %p
-      Bacon ipsum dolor sit amet pork belly meatball ham hock consectetur adipisicing aliqua shoulder minim swine consequat short ribs elit tenderloin prosciutto quis. Eu minim turducken sint occaecat enim exercitation chicken pork commodo deserunt ea. Commodo drumstick bresaola et jowl adipisicing laborum dolore. Hamburger chuck spare ribs exercitation, velit ribeye t-bone aliquip shank reprehenderit minim doner do. Pig hamburger sausage qui.
-    %p
-      Ut swine eiusmod shankle, venison filet mignon ad capicola. Tri-tip rump magna pig tail hamburger quis aute tenderloin aliqua. Filet mignon pork loin tongue corned beef t-bone quis. Qui capicola ad beef tongue in filet mignon dolore meatloaf sed exercitation frankfurter consectetur velit. Commodo cupidatat et nisi esse adipisicing. Officia shoulder turducken fatback, tri-tip tongue bacon minim meatloaf fugiat beef ribs.
-    %p
-      Tri-tip dolore meatball excepteur ribeye esse chicken kielbasa pork belly tongue filet mignon tempor. Occaecat fugiat kielbasa bresaola anim sausage. Dolore laboris drumstick sirloin et leberkas minim strip steak aliquip pork chop voluptate. Bacon anim ut, sint doner cillum irure. Hamburger ex magna pig dolore, prosciutto ham ball tip strip steak pork tempor drumstick fugiat frankfurter.
-    %p
-      Aliquip excepteur bresaola exercitation minim aute. Jerky mollit corned beef occaecat pastrami doner. T-bone ut adipisicing aute flank, nostrud nulla sausage veniam corned beef magna strip steak. Chuck aliquip prosciutto, ullamco in boudin adipisicing tempor corned beef. Voluptate mollit tempor qui.
-    %p
-      Fatback culpa cillum corned beef salami ea sint deserunt ad flank turducken exercitation aliqua. Pork chop t-bone pastrami pariatur veniam. Venison aute rump dolor ground round in ullamco shank do voluptate tempor pig excepteur enim beef ribs. Culpa jerky in, ham occaecat in dolore pork nulla ut incididunt velit ribeye bacon. Consectetur pork belly id eu in adipisicing pork loin in. Corned beef ground round reprehenderit jowl. Pork chop pancetta reprehenderit, nulla kielbasa veniam turducken.
+  =image_tag('/assets/HomePage_12.jpg', class: 'centered')
