--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -17,7 +17,7 @@
       %tr
         %td= camp.camp_type.capitalize
         %td= camp.start_date.to_formatted_s(:long)
-        %td= camp.start_date.to_formatted_s(:long)
+        %td= camp.end_date.to_formatted_s(:long)
         %td= number_to_currency(camp.price)
         - if current_user
           %td
