Clean up display of pages

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,4 +6,5 @@
     If you seek surf lessons from knowledgeable, skilled instructors in a comfortable envrionment, then you’ve come to the right place. Please follow the links above to learn more about the Saltwater Cowgirls Surf Camp experience!
 
 .row
-  =image_tag('/assets/HomePage_12.jpg', class: 'centered')
+  .centered
+    =image_tag('/assets/HomePage_12.jpg')
