Add contact info to footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,6 +41,11 @@
             =link_to "View/Manage Reservations", reservations_path
           -else
             =link_to "Admin Log In", '/log_in'
+        .row.text-centered
+          %p 
+            Phone: 904-238-4716
+            | E-Mail:
+            = mail_to 'saltwatercowgirls@gmail.com'
 
         .row.text-centered
           %p
