Add deposit payment requirement for reservations.

--- a/app/views/reservations/index.html.haml
+++ b/app/views/reservations/index.html.haml
@@ -3,13 +3,15 @@
     %tr
       %th Name
       %th Start Date
-      %th Paid
+      %th Deposit Paid
+      %th Balance
       %th Actions
     - reservations.each do |reservation|
       %tr
         %td= reservation.name
         %td= reservation.camp_start_date
         %td= reservation.paid
+        %td= number_to_currency(reservation.balance)
         %td
           = link_to "View", action: 'show_admin', reservation_id: reservation.id
           |
