--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -9,15 +9,14 @@
     %em Confirmation ID:
     = reservation.confirmation_id
 
-- if !reservation.paid
+- if reservation.balance > 0
   .row
-    %p Your reservation is still pending payment. Please make pay in full by the Wednesday prior to the camp start date to maintain your reservation.
+    %p= "You have an unpaid balance of #{number_to_currency(reservation.balance)}. Please make pay in full by the Wednesday prior to the camp start date to maintain your reservation."
 
     %h4 Payment Options
 
     %p Click here to pay now via PayPal
-    = link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), controller: 'paypal_express', action: 'checkout', reservation_id: reservation.id
-
+    = link_to image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), controller: 'paypal_express', action: 'checkout', reservation_id: reservation.id, payment_amount: reservation.balance, payment_type: "secondary"
 
 - else
   .row
