--- a/app/views/site_mailer/reservation_notification.html.haml
+++ b/app/views/site_mailer/reservation_notification.html.haml
@@ -2,7 +2,7 @@
 
 %p
   %strong Camp Start Date:
-  = @reservation.camp_start_date.to_formatted_s(:long)
+  = @reservation.camp.start_date.to_formatted_s(:long)
 
 %p
   %strong Age:
