--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -11,6 +11,7 @@
       %th End Date
       %th Cost
       %th Location
+      %th Remaining
       - if current_user
         %th Actions
 
@@ -21,6 +22,7 @@
         %td= camp.end_date.to_formatted_s(:long)
         %td= number_to_currency(camp.price)
         %td= camp.location
+        %td= 30 - camp.reservations.size
         - if current_user
           %td
             = link_to "Edit", edit_camp_path(camp)
