--- a/app/views/site_mailer/reservation_payment_notification.html.haml
+++ b/app/views/site_mailer/reservation_payment_notification.html.haml
@@ -1,3 +1,3 @@
-%p= "A payment has been made for #{@reservation.name} for the camp starting on #{@reservation.camp_start_date}."
+%p= "A payment has been made for #{@reservation.name} for the camp starting on #{@reservation.camp.start_date}."
 
 %p= "The remaining balance for this reservation is #{number_to_currency(@reservation.balance)}."
