Fix validations on Reservation model

--- a/app/views/reservations/_form.html.haml
+++ b/app/views/reservations/_form.html.haml
@@ -17,7 +17,7 @@
   =f.text_area :address, rows: 4
 
 %dl
-  =f.label :email
+  =f.label :email, 'E-Mail *'
   %span{ class: 'form-explanation' } student/parent
   =f.email_field :email
 
