Fix time in mailer and add address to footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,6 +42,9 @@
           -else
             =link_to "Admin Log In", '/log_in'
         .row.text-centered
+          %p
+            Saltwater Cowgirls, 835 5th Street North, Jacksonville Beach, FL 32250
+        .row.text-centered
           %p 
             Phone: 904-238-4716
             | E-Mail:
