Change language to clarify sign up process

--- a/app/views/camps/index.html.haml
+++ b/app/views/camps/index.html.haml
@@ -30,6 +30,5 @@
             = link_to "Delete", camp, method: :delete, confirm: "Are you sure?"
       
 .row
-  %p
-    = link_to "Click Here", new_reservation_path
-    to make a reservation today.
+  %h1
+    = link_to "Sign Up Here", new_reservation_path
