--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
       .nav
         %ul
           %li= link_to "Lessons", '/lessons'
-          %li= link_to "Camp Dates", camps_path
+          %li= link_to "Surf Camp", camps_path
           %li= link_to "Gallery", '/pictures/gallery'
           %li= link_to "Location", '/location'
           
