--- a/app/views/reservations/show.html.haml
+++ b/app/views/reservations/show.html.haml
@@ -19,7 +19,7 @@
       = "You have an unpaid balance of #{number_to_currency(reservation.balance)}."
       - if !reservation.paid
         You have not yet placed a deposit on your reservation. A $50 deposit is required to hold your reservation.
-        Full payment is due by the Wednesday prior to the camp start date to maintain your reservation. Please contact saltwatercowgirls@gmail.com to make a payment.
+        Please mail checks to Saltwater Cowgirls, 835 5th Street North, Jacksonville Beach, FL 32250, or call 904-238-4716 to pay by credit card.
 
 - else
   .row
